--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,17 @@ $RECYCLE.BIN/
 
 # IntelliJ
 /out/
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
