--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>lazyguy.yyf</groupId>
     <artifactId>threadtest</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
